--- a/chess-meeting-frontend/public/index.html
+++ b/chess-meeting-frontend/public/index.html
@@ -15,6 +15,13 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="http://fonts.cdnfonts.com/css/major-mono-display" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Major Mono Display' rel='stylesheet'>
+    <style>
+      body {
+        font-family: 'Major Mono Display';
+      }
+    </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,7 +33,7 @@
     -->
     <title>Chess Meeting App</title>
   </head>
-  <body style="background-color: white">
+  <body style="background-color: grey">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
