--- a/chess-meeting-frontend/public/index.html
+++ b/chess-meeting-frontend/public/index.html
@@ -45,7 +45,7 @@
     -->
     <title>Chess Meeting App</title>
   </head>
-  <body style="background-color: black">
+  <body style="background-color: white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
